// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PhonemeEngine > Regression Contract (Corpus Sample) > keeps analyzeDeep output stable for a deterministic corpus sample 1`] = `
{
  "baseline": [
    {
      "extendedRhymeKeys": [
        "AE-open",
      ],
      "rhymeKey": "AE-open",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "",
          "index": 0,
          "onset": "TH",
          "stress": 1,
          "vowel": "EH1",
          "vowelFamily": "AE",
        },
      ],
      "word": "THE",
    },
    {
      "extendedRhymeKeys": [
        "A-open",
      ],
      "rhymeKey": "A-open",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "",
          "index": 0,
          "onset": "T",
          "stress": 1,
          "vowel": "AA1",
          "vowelFamily": "A",
        },
      ],
      "word": "TO",
    },
    {
      "extendedRhymeKeys": [
        "A-F",
      ],
      "rhymeKey": "A-F",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "F",
          "index": 0,
          "onset": "",
          "stress": 1,
          "vowel": "AA1",
          "vowelFamily": "A",
        },
      ],
      "word": "OF",
    },
    {
      "extendedRhymeKeys": [
        "AE-ND",
      ],
      "rhymeKey": "AE-ND",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "ND",
          "index": 0,
          "onset": "",
          "stress": 1,
          "vowel": "AE1",
          "vowelFamily": "AE",
        },
      ],
      "word": "AND",
    },
    {
      "extendedRhymeKeys": [
        "IH-TH",
      ],
      "rhymeKey": "IH-TH",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "TH",
          "index": 0,
          "onset": "W",
          "stress": 1,
          "vowel": "IH1",
          "vowelFamily": "IH",
        },
      ],
      "word": "WITH",
    },
    {
      "extendedRhymeKeys": [
        "IH-T",
      ],
      "rhymeKey": "IH-T",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "T",
          "index": 0,
          "onset": "",
          "stress": 1,
          "vowel": "IH1",
          "vowelFamily": "IH",
        },
      ],
      "word": "IT",
    },
    {
      "extendedRhymeKeys": [
        "EY-K",
      ],
      "rhymeKey": "EY-K",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "K",
          "index": 0,
          "onset": "L",
          "stress": 1,
          "vowel": "AY1",
          "vowelFamily": "EY",
        },
      ],
      "word": "LIKE",
    },
    {
      "extendedRhymeKeys": [
        "IH-N",
      ],
      "rhymeKey": "IH-N",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "N",
          "index": 0,
          "onset": "",
          "stress": 1,
          "vowel": "IH1",
          "vowelFamily": "IH",
        },
      ],
      "word": "IN",
    },
    {
      "extendedRhymeKeys": [
        "EY-open",
      ],
      "rhymeKey": "EY-open",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "",
          "index": 0,
          "onset": "M",
          "stress": 1,
          "vowel": "AY1",
          "vowelFamily": "EY",
        },
      ],
      "word": "MY",
    },
    {
      "extendedRhymeKeys": [
        "A-open",
      ],
      "rhymeKey": "A-open",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "",
          "index": 0,
          "onset": "Y",
          "stress": 1,
          "vowel": "AW1",
          "vowelFamily": "A",
        },
      ],
      "word": "YOU",
    },
    {
      "extendedRhymeKeys": [
        "IH-S",
      ],
      "rhymeKey": "IH-S",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "S",
          "index": 0,
          "onset": "",
          "stress": 1,
          "vowel": "IH1",
          "vowelFamily": "IH",
        },
      ],
      "word": "IS",
    },
    {
      "extendedRhymeKeys": [
        "IH-M",
      ],
      "rhymeKey": "IH-M",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "M",
          "index": 0,
          "onset": "",
          "stress": 1,
          "vowel": "IH1",
          "vowelFamily": "IH",
        },
      ],
      "word": "IM",
    },
    {
      "extendedRhymeKeys": [
        "AE-T",
      ],
      "rhymeKey": "AE-T",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "T",
          "index": 0,
          "onset": "TH",
          "stress": 1,
          "vowel": "AE1",
          "vowelFamily": "AE",
        },
      ],
      "word": "THAT",
    },
    {
      "extendedRhymeKeys": [
        "AE-open",
      ],
      "rhymeKey": "AE-open",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "",
          "index": 0,
          "onset": "M",
          "stress": 1,
          "vowel": "EH1",
          "vowelFamily": "AE",
        },
      ],
      "word": "ME",
    },
    {
      "extendedRhymeKeys": [
        "A-N",
      ],
      "rhymeKey": "A-N",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "N",
          "index": 0,
          "onset": "",
          "stress": 1,
          "vowel": "AA1",
          "vowelFamily": "A",
        },
      ],
      "word": "ON",
    },
    {
      "extendedRhymeKeys": [
        "A-T",
      ],
      "rhymeKey": "A-T",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "T",
          "index": 0,
          "onset": "B",
          "stress": 1,
          "vowel": "AH1",
          "vowelFamily": "A",
        },
      ],
      "word": "BUT",
    },
    {
      "extendedRhymeKeys": [
        "AE-Y",
      ],
      "rhymeKey": "AE-Y",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "Y",
          "index": 0,
          "onset": "TH",
          "stress": 1,
          "vowel": "EH1",
          "vowelFamily": "AE",
        },
      ],
      "word": "THEY",
    },
    {
      "extendedRhymeKeys": [
        "A-R",
      ],
      "rhymeKey": "A-R",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "R",
          "index": 0,
          "onset": "Y",
          "stress": 1,
          "vowel": "AW1",
          "vowelFamily": "A",
        },
      ],
      "word": "YOUR",
    },
    {
      "extendedRhymeKeys": [
        "AE-S",
      ],
      "rhymeKey": "AE-S",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "S",
          "index": 0,
          "onset": "",
          "stress": 1,
          "vowel": "AE1",
          "vowelFamily": "AE",
        },
      ],
      "word": "AS",
    },
    {
      "extendedRhymeKeys": [
        "EY-R",
        "AE-R/EY-R",
        "AE-open/AE-R/EY-R",
        "A-R/AE-open/AE-R/EY-R",
      ],
      "rhymeKey": "EY-R",
      "stressPattern": "0001",
      "syllableCount": 4,
      "syllables": [
        {
          "coda": "R",
          "index": 0,
          "onset": "W",
          "stress": 0,
          "vowel": "AA0",
          "vowelFamily": "A",
        },
        {
          "coda": "",
          "index": 1,
          "onset": "K",
          "stress": 0,
          "vowel": "EH0",
          "vowelFamily": "AE",
        },
        {
          "coda": "R",
          "index": 2,
          "onset": "ST",
          "stress": 0,
          "vowel": "EH0",
          "vowelFamily": "AE",
        },
        {
          "coda": "R",
          "index": 3,
          "onset": "SH",
          "stress": 1,
          "vowel": "AY1",
          "vowelFamily": "EY",
        },
      ],
      "word": "WORCESTERSHIRE",
    },
    {
      "extendedRhymeKeys": [
        "IH-K",
      ],
      "rhymeKey": "IH-K",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "K",
          "index": 0,
          "onset": "TH",
          "stress": 1,
          "vowel": "IH1",
          "vowelFamily": "IH",
        },
      ],
      "word": "THICK",
    },
    {
      "extendedRhymeKeys": [
        "AE-open",
        "AO-open/AE-open",
      ],
      "rhymeKey": "AE-open",
      "stressPattern": "10",
      "syllableCount": 2,
      "syllables": [
        {
          "coda": "",
          "index": 0,
          "onset": "S",
          "stress": 1,
          "vowel": "AO1",
          "vowelFamily": "AO",
        },
        {
          "coda": "",
          "index": 1,
          "onset": "K",
          "stress": 0,
          "vowel": "EH0",
          "vowelFamily": "AE",
        },
      ],
      "word": "SAUCE",
    },
    {
      "extendedRhymeKeys": [
        "IY-open",
      ],
      "rhymeKey": "IY-open",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "",
          "index": 0,
          "onset": "S",
          "stress": 1,
          "vowel": "IY1",
          "vowelFamily": "IY",
        },
      ],
      "word": "SEE",
    },
    {
      "extendedRhymeKeys": [
        "AE-N",
      ],
      "rhymeKey": "AE-N",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "N",
          "index": 0,
          "onset": "W",
          "stress": 1,
          "vowel": "EH1",
          "vowelFamily": "AE",
        },
      ],
      "word": "WHEN",
    },
  ],
  "words": [
    "the",
    "to",
    "of",
    "and",
    "with",
    "it",
    "like",
    "in",
    "my",
    "you",
    "is",
    "im",
    "that",
    "me",
    "on",
    "but",
    "they",
    "your",
    "as",
    "worcestershire",
    "thick",
    "sauce",
    "see",
    "when",
  ],
}
`;

exports[`PhonemeEngine > Regression Contract (Corpus Sample) > keeps analyzeWord output stable for a deterministic corpus sample 1`] = `
{
  "baseline": [
    {
      "coda": null,
      "phonemes": [
        "TH",
        "EH1",
      ],
      "rhymeKey": "AE-open",
      "syllableCount": 1,
      "vowelFamily": "AE",
      "word": "THE",
    },
    {
      "coda": null,
      "phonemes": [
        "T",
        "AA1",
      ],
      "rhymeKey": "A-open",
      "syllableCount": 1,
      "vowelFamily": "A",
      "word": "TO",
    },
    {
      "coda": "F",
      "phonemes": [
        "AA1",
        "F",
      ],
      "rhymeKey": "A-F",
      "syllableCount": 1,
      "vowelFamily": "A",
      "word": "OF",
    },
    {
      "coda": "ND",
      "phonemes": [
        "AE1",
        "N",
        "D",
      ],
      "rhymeKey": "AE-ND",
      "syllableCount": 1,
      "vowelFamily": "AE",
      "word": "AND",
    },
    {
      "coda": "TH",
      "phonemes": [
        "W",
        "IH1",
        "TH",
      ],
      "rhymeKey": "IH-TH",
      "syllableCount": 1,
      "vowelFamily": "IH",
      "word": "WITH",
    },
    {
      "coda": "T",
      "phonemes": [
        "IH1",
        "T",
      ],
      "rhymeKey": "IH-T",
      "syllableCount": 1,
      "vowelFamily": "IH",
      "word": "IT",
    },
    {
      "coda": "K",
      "phonemes": [
        "L",
        "AY1",
        "K",
      ],
      "rhymeKey": "EY-K",
      "syllableCount": 1,
      "vowelFamily": "EY",
      "word": "LIKE",
    },
    {
      "coda": "N",
      "phonemes": [
        "IH1",
        "N",
      ],
      "rhymeKey": "IH-N",
      "syllableCount": 1,
      "vowelFamily": "IH",
      "word": "IN",
    },
    {
      "coda": null,
      "phonemes": [
        "M",
        "AY1",
      ],
      "rhymeKey": "EY-open",
      "syllableCount": 1,
      "vowelFamily": "EY",
      "word": "MY",
    },
    {
      "coda": null,
      "phonemes": [
        "Y",
        "AW1",
      ],
      "rhymeKey": "A-open",
      "syllableCount": 1,
      "vowelFamily": "A",
      "word": "YOU",
    },
    {
      "coda": "S",
      "phonemes": [
        "IH1",
        "S",
      ],
      "rhymeKey": "IH-S",
      "syllableCount": 1,
      "vowelFamily": "IH",
      "word": "IS",
    },
    {
      "coda": "M",
      "phonemes": [
        "IH1",
        "M",
      ],
      "rhymeKey": "IH-M",
      "syllableCount": 1,
      "vowelFamily": "IH",
      "word": "IM",
    },
    {
      "coda": "T",
      "phonemes": [
        "TH",
        "AE1",
        "T",
      ],
      "rhymeKey": "AE-T",
      "syllableCount": 1,
      "vowelFamily": "AE",
      "word": "THAT",
    },
    {
      "coda": null,
      "phonemes": [
        "M",
        "EH1",
      ],
      "rhymeKey": "AE-open",
      "syllableCount": 1,
      "vowelFamily": "AE",
      "word": "ME",
    },
    {
      "coda": "N",
      "phonemes": [
        "AA1",
        "N",
      ],
      "rhymeKey": "A-N",
      "syllableCount": 1,
      "vowelFamily": "A",
      "word": "ON",
    },
    {
      "coda": "T",
      "phonemes": [
        "B",
        "AH1",
        "T",
      ],
      "rhymeKey": "A-T",
      "syllableCount": 1,
      "vowelFamily": "A",
      "word": "BUT",
    },
    {
      "coda": "Y",
      "phonemes": [
        "TH",
        "EH1",
        "Y",
      ],
      "rhymeKey": "AE-Y",
      "syllableCount": 1,
      "vowelFamily": "AE",
      "word": "THEY",
    },
    {
      "coda": "R",
      "phonemes": [
        "Y",
        "AW1",
        "R",
      ],
      "rhymeKey": "A-R",
      "syllableCount": 1,
      "vowelFamily": "A",
      "word": "YOUR",
    },
    {
      "coda": "S",
      "phonemes": [
        "AE1",
        "S",
      ],
      "rhymeKey": "AE-S",
      "syllableCount": 1,
      "vowelFamily": "AE",
      "word": "AS",
    },
    {
      "coda": "R",
      "phonemes": [
        "W",
        "AA0",
        "R",
        "K",
        "EH0",
        "S",
        "T",
        "EH0",
        "R",
        "SH",
        "AY1",
        "R",
      ],
      "rhymeKey": "EY-R",
      "syllableCount": 4,
      "vowelFamily": "EY",
      "word": "WORCESTERSHIRE",
    },
    {
      "coda": "K",
      "phonemes": [
        "TH",
        "IH1",
        "K",
      ],
      "rhymeKey": "IH-K",
      "syllableCount": 1,
      "vowelFamily": "IH",
      "word": "THICK",
    },
    {
      "coda": null,
      "phonemes": [
        "S",
        "AO1",
        "K",
        "EH0",
      ],
      "rhymeKey": "AE-open",
      "syllableCount": 2,
      "vowelFamily": "AO",
      "word": "SAUCE",
    },
    {
      "coda": null,
      "phonemes": [
        "S",
        "IY1",
      ],
      "rhymeKey": "IY-open",
      "syllableCount": 1,
      "vowelFamily": "IY",
      "word": "SEE",
    },
    {
      "coda": "N",
      "phonemes": [
        "W",
        "EH1",
        "N",
      ],
      "rhymeKey": "AE-N",
      "syllableCount": 1,
      "vowelFamily": "AE",
      "word": "WHEN",
    },
  ],
  "words": [
    "the",
    "to",
    "of",
    "and",
    "with",
    "it",
    "like",
    "in",
    "my",
    "you",
    "is",
    "im",
    "that",
    "me",
    "on",
    "but",
    "they",
    "your",
    "as",
    "worcestershire",
    "thick",
    "sauce",
    "see",
    "when",
  ],
}
`;
